Fix text alignment for item info mobile view

--- a/src/client/styles/components/ItemTable.scss
+++ b/src/client/styles/components/ItemTable.scss
@@ -88,7 +88,6 @@ dl dd.multi-item-list .nypl-basic-table a,
 
       td {
         display: block;
-        text-align: right;
 
         &.vol-date-col {
           background-color: var(--ui-gray-light);
